namespace ArlaNatureConnect.Core.Abstract;

public interface IAddressRepository : IRepository<ArlaNatureConnect.Domain.Entities.Address>
{
}
