namespace ArlaNatureConnect.Core.Abstract;

public interface IFarmRepository : IRepository<ArlaNatureConnect.Domain.Entities.Farm>
{
}
