namespace ArlaNatureConnect.Core.Abstract;

public interface IPersonRepository : IRepository<ArlaNatureConnect.Domain.Entities.Person>
{
}
