namespace ArlaNatureConnect.Core.Abstract;

public interface IRoleRepository : IRepository<ArlaNatureConnect.Domain.Entities.Role>
{
}
